--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# Logs
-logs
+# Игнорируем файлы конфигурации, содержащие секреты и пароли
+.env
+
+# Игнорируем директории node_modules и пакеты для npm или yarn
+node_modules/
+
+# Игнорируем файлы, сгенерированные npm или yarn
+package-lock.json
+yarn.lock
+
+# Игнорируем директории и файлы, созданные при сборке проекта
+dist/
+build/
+
+# Игнорируем IDE и редакторы (например, VSCode, WebStorm, и т.д.)
+.vscode/
+.idea/
+
+# Логи
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+logs/
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Игнорируем файлы операционной системы
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Прочие временные файлы
+*.tmp
+*.swp
+
+# Игнорируем файлы, связанные с Docker (если используются)
+docker-compose.override.yml
+Dockerfile*
